# nanoclaw-signal-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup  setup.sh
config/: nanoclaw.json.template
config/identity/: IDENTITY.md.template  SOUL.md.template  USER.md.template
docs/: ARCHITECTURE.md  CUSTOMIZATION.md
scripts/: health-check.sh  install-launchd.sh  install-systemd.sh  register-signal.sh  setup.sh  start.sh
src/nanoclaw/: __init__.py  __main__.py  agents.py  auth.py  cli.py  config.py  orchestrator.py
src/nanoclaw/channels/: __init__.py  signal.py
src/nanoclaw/setup/: __init__.py  state.py  ui.py  wizard.py
src/nanoclaw/setup/steps/: __init__.py  agent_config.py  api_keys.py  dependencies.py  health.py  identity.py  service.py  signal_setup.py  welcome.py
src/nanoclaw/stores/: __init__.py  conversations.py  crypto.py  usage.py
workspace/: MEMORY.md.template
